encora lookup functioning

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -312,7 +312,37 @@
         <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsDropEnabled|ItemIsEnabled</set>
        </property>
       </item>
+      <item row="0" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="0" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="0" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="1" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="1" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="1" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="1" column="3">
        <property name="text">
         <string/>
        </property>
@@ -322,7 +352,37 @@
         <string/>
        </property>
       </item>
+      <item row="2" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="2" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="2" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="3" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="3" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="3" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="3" column="3">
        <property name="text">
         <string/>
        </property>
@@ -332,7 +392,37 @@
         <string/>
        </property>
       </item>
+      <item row="4" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="4" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="4" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="5" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="5" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="5" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="5" column="3">
        <property name="text">
         <string/>
        </property>
@@ -342,7 +432,37 @@
         <string/>
        </property>
       </item>
+      <item row="6" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="6" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="6" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="7" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="7" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="7" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="7" column="3">
        <property name="text">
         <string/>
        </property>
@@ -352,7 +472,37 @@
         <string/>
        </property>
       </item>
+      <item row="8" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="8" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="8" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="9" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="9" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="9" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="9" column="3">
        <property name="text">
         <string/>
        </property>
@@ -362,7 +512,37 @@
         <string/>
        </property>
       </item>
+      <item row="10" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="10" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="10" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="11" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="11" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="11" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="11" column="3">
        <property name="text">
         <string/>
        </property>
@@ -372,7 +552,37 @@
         <string/>
        </property>
       </item>
+      <item row="12" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="12" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="12" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="13" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="13" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="13" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="13" column="3">
        <property name="text">
         <string/>
        </property>
@@ -382,7 +592,37 @@
         <string/>
        </property>
       </item>
+      <item row="14" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="14" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="14" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="15" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="15" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="15" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="15" column="3">
        <property name="text">
         <string/>
        </property>
@@ -392,7 +632,37 @@
         <string/>
        </property>
       </item>
+      <item row="16" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="16" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="16" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="17" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="17" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="17" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="17" column="3">
        <property name="text">
         <string/>
        </property>
@@ -402,7 +672,37 @@
         <string/>
        </property>
       </item>
+      <item row="18" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="18" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="18" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="19" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="19" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="19" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="19" column="3">
        <property name="text">
         <string/>
        </property>
@@ -412,7 +712,37 @@
         <string/>
        </property>
       </item>
+      <item row="20" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="20" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="20" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="21" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="21" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="21" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="21" column="3">
        <property name="text">
         <string/>
        </property>
@@ -422,7 +752,37 @@
         <string/>
        </property>
       </item>
+      <item row="22" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="22" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="22" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="23" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="23" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="23" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="23" column="3">
        <property name="text">
         <string/>
        </property>
@@ -432,7 +792,37 @@
         <string/>
        </property>
       </item>
+      <item row="24" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="24" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="24" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="25" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="25" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="25" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="25" column="3">
        <property name="text">
         <string/>
        </property>
@@ -442,7 +832,37 @@
         <string/>
        </property>
       </item>
+      <item row="26" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="26" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="26" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="27" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="27" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="27" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="27" column="3">
        <property name="text">
         <string/>
        </property>
@@ -452,7 +872,37 @@
         <string/>
        </property>
       </item>
+      <item row="28" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="28" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="28" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="29" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="29" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="29" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="29" column="3">
        <property name="text">
         <string/>
        </property>
@@ -462,7 +912,37 @@
         <string/>
        </property>
       </item>
+      <item row="30" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="30" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="30" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="31" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="31" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="31" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="31" column="3">
        <property name="text">
         <string/>
        </property>
@@ -472,7 +952,37 @@
         <string/>
        </property>
       </item>
+      <item row="32" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="32" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="32" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="33" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="33" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="33" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="33" column="3">
        <property name="text">
         <string/>
        </property>
@@ -482,7 +992,37 @@
         <string/>
        </property>
       </item>
+      <item row="34" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="34" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="34" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="35" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="35" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="35" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="35" column="3">
        <property name="text">
         <string/>
        </property>
@@ -492,7 +1032,37 @@
         <string/>
        </property>
       </item>
+      <item row="36" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="36" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="36" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="37" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="37" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="37" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="37" column="3">
        <property name="text">
         <string/>
        </property>
@@ -502,7 +1072,37 @@
         <string/>
        </property>
       </item>
+      <item row="38" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="38" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="38" column="3">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
       <item row="39" column="0">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="39" column="1">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="39" column="2">
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+      <item row="39" column="3">
        <property name="text">
         <string/>
        </property>
