--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1144,7 +1144,7 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEdit">
+     <widget class="QLineEdit" name="encoraCookie">
       <property name="placeholderText">
        <string>Paste your cookie after logging into beta.encora.it here</string>
       </property>
