--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,6 +106,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="resetAPIKeyButton">
+        <property name="text">
+         <string>Reset API Key</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item row="4" column="0">
