--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>832</width>
-    <height>608</height>
+    <width>867</width>
+    <height>677</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -20,7 +20,7 @@
    <string>NFOBuilder for Plex</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset>
     <normaloff>:/resources/plex-nfo.ico</normaloff>:/resources/plex-nfo.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -204,8 +204,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>798</width>
-         <height>682</height>
+         <width>833</width>
+         <height>616</height>
         </rect>
        </property>
        <layout class="QFormLayout" name="formLayout_2">
@@ -218,6 +218,12 @@
         </item>
         <item row="0" column="1">
          <widget class="QLineEdit" name="showNameInput">
+          <property name="minimumSize">
+           <size>
+            <width>702</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="placeholderText">
            <string>The shows name</string>
           </property>
@@ -232,6 +238,12 @@
         </item>
         <item row="1" column="1">
          <widget class="QLineEdit" name="showDateInput">
+          <property name="minimumSize">
+           <size>
+            <width>702</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="placeholderText">
            <string>YYYY-MM-DD</string>
           </property>
@@ -246,6 +258,12 @@
         </item>
         <item row="2" column="1">
          <widget class="QLineEdit" name="showLocationInput">
+          <property name="minimumSize">
+           <size>
+            <width>702</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="frame">
            <bool>true</bool>
           </property>
@@ -263,6 +281,12 @@
         </item>
         <item row="3" column="1">
          <widget class="QLineEdit" name="showMasterInput">
+          <property name="minimumSize">
+           <size>
+            <width>702</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="placeholderText">
            <string>The Master who released this</string>
           </property>
@@ -1264,7 +1288,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>832</width>
+     <width>867</width>
      <height>22</height>
     </rect>
    </property>
@@ -1275,8 +1299,6 @@
    </property>
   </action>
  </widget>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
