--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1293,10 +1293,43 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <widget class="QMenu" name="menuAPI_Key">
+     <property name="title">
+      <string>&amp;API Key</string>
+     </property>
+     <addaction name="actionReset_API_Key"/>
+    </widget>
+    <addaction name="menuAPI_Key"/>
+    <addaction name="actionLoad_NFO"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <action name="actionQuit">
    <property name="text">
     <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionReset_API_Key">
+   <property name="icon">
+    <iconset theme="QIcon::ThemeIcon::EditDelete"/>
+   </property>
+   <property name="text">
+    <string>&amp;Reset API Key</string>
+   </property>
+  </action>
+  <action name="actionLoad_NFO">
+   <property name="icon">
+    <iconset theme="QIcon::ThemeIcon::DocumentOpen"/>
+   </property>
+   <property name="text">
+    <string>&amp;Load NFO</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
    </property>
   </action>
  </widget>
